# EPIC-Tool

./: .env.acceptance  .env.preprod  .gitignore  README.md  db.sqlite3  index.html  index.md  install_acceptance.sh  install_preprod.sh  manage.py  package-lock.json  package.json  vue.config.js
backend/: README.md  changelog.md  deploy.sh  initial_deployment.sh  manage.py  pyproject.toml  pytest.ini  test_deployment.sh  update_deployment.sh
backend/epic_app/: admin.py  apps.py  epic_permissions.py  importers.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/epic_app/admin_models/: generate_entity_admin.py  import_entity_admin.py
backend/epic_app/importers/: __init__.py  agency_csv_importer.py  csv_base_importer.py  domain_csv_importer.py  question_csv_importer.py
backend/epic_app/importers/xlsx/: __init__.py  agency_importer.py  base_importer.py  domain_importer.py  question_importer.py
backend/epic_app/management/commands/: create_dummy_users.py  epic_setup.py  import_epic_domain.py
backend/epic_app/models/: epic_answers.py  epic_questions.py  epic_user.py  models.py
backend/epic_app/serializers/: __init__.py  agency_serializer.py  answer_serializer.py  area_serializer.py  epic_user_serializer.py  group_serializer.py  program_serializer.py  progress_serializer.py  question_serializer.py  report_pdf.py  report_serializer.py
backend/epic_app/templates/: generate_changelist.html  import_changelist.html
backend/epic_app/templates/admin/: populate_epicusers_form.html  xlsx_form.html
backend/epic_app/tests/: __init__.py  epic_db_fixture.py  request_helper.py  test_acceptance_pdf_report.py  test_admin.py  test_importers.py  test_models.py  test_rest_framework_url.py  test_views.py
backend/epic_app/tests/admin_models/: test_generate_entity_admin.py  test_import_entity_admin.py
backend/epic_app/tests/importers/: __init__.py  epic_domain_import_fixture.py  epic_domain_importer_fixture.py  test_agency_csv_importer.py  test_csv_base_importer.py  test_domain_csv_importer.py  test_question_csv_importer.py  test_xlsx_base_importer.py
backend/epic_app/tests/models/: dummy_db.py  test_epic_answers.py  test_epic_questions.py  test_epic_user.py  test_models.py
backend/epic_app/tests/serializers/: test_answer_serializer.py  test_epic_user_serializer.py  test_progress_serializer.py  test_question_serializer.py  test_report_serializer.py
backend/epic_app/tests/test_data/: agency_data.csv  (+3 more)
backend/epic_core/: asgi.py  settings.py  urls.py  wsgi.py
backend/epic_tool/: asgi.py  settings.py  urls.py  wsgi.py
src/: App.vue
(+81 files in other folders)
